--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
 
         let currentCategory = "";
         let currentInsect = null;
+        let questionType = "image"; // Start with a question that shows an insect image
 
         function getRandomCategory() {
             const categories = Object.keys(insects);
@@ -150,39 +151,83 @@
         }
 
         function loadNewQuestion() {
-            currentCategory = getRandomCategory();
-            currentInsect = getRandomInsect(currentCategory);
+            if (questionType === "image") {
+                // Normal question: Show insect image and ask for the insect name
+                currentCategory = getRandomCategory();
+                currentInsect = getRandomInsect(currentCategory);
 
-            const imageElement = document.getElementById("question-image");
-            const optionsContainer = document.getElementById("options-container");
-            const questionText = document.getElementById("question-text");
+                const imageElement = document.getElementById("question-image");
+                const optionsContainer = document.getElementById("options-container");
+                const questionText = document.getElementById("question-text");
 
-            imageElement.src = currentInsect.image;
-            imageElement.alt = currentInsect.name;
+                imageElement.src = currentInsect.image;
+                imageElement.alt = currentInsect.name;
 
-            questionText.textContent = `Welcher Insektentyp ist das? (Entwicklungsart: ${developmentTypes[currentInsect.development]})`;
+                questionText.textContent = "Welches Insekt ist das?";
 
-            const categoryInsects = insects[currentCategory];
-            const options = [...categoryInsects].sort(() => Math.random() - 0.5).slice(0, 4);
+                const categoryInsects = insects[currentCategory];
+                const options = [...categoryInsects].sort(() => Math.random() - 0.5).slice(0, 4);
 
-            if (!options.some(option => option.name === currentInsect.name)) {
-                options[Math.floor(Math.random() * options.length)] = currentInsect;
+                if (!options.some(option => option.name === currentInsect.name)) {
+                    options[Math.floor(Math.random() * options.length)] = currentInsect;
+                }
+
+                optionsContainer.innerHTML = "";
+                options.forEach(option => {
+                    const button = document.createElement("button");
+                    button.classList.add("option");
+                    button.textContent = option.name;
+                    button.onclick = () => checkAnswer(option.name);
+                    optionsContainer.appendChild(button);
+                });
+
+                imageElement.style.display = "block";
+                questionType = "development"; // Next question should be about development
+            } else if (questionType === "development") {
+                // Development question: Show an insect and ask for the development type
+                currentCategory = getRandomCategory();
+                currentInsect = getRandomInsect(currentCategory);
+
+                const imageElement = document.getElementById("question-image");
+                const optionsContainer = document.getElementById("options-container");
+                const questionText = document.getElementById("question-text");
+
+                imageElement.src = currentInsect.image;
+                imageElement.alt = currentInsect.name;
+
+                questionText.textContent = `Wie entwickelt sich die ${currentInsect.name}?`;
+
+                const options = [
+                    "holometabol (Komplette Metamorphose)",
+                    "hemimetabol (Unvollständige Metamorphose)",
+                    "ametabol (Keine Metamorphose)"
+                ];
+
+                optionsContainer.innerHTML = "";
+                options.forEach(option => {
+                    const button = document.createElement("button");
+                    button.classList.add("option");
+                    button.textContent = option;
+                    button.onclick = () => checkDevelopmentAnswer(option);
+                    optionsContainer.appendChild(button);
+                });
+
+                imageElement.style.display = "block";
+                questionType = "image"; // Next question should be about insect image
             }
-
-            optionsContainer.innerHTML = "";
-            options.forEach(option => {
-                const button = document.createElement("button");
-                button.classList.add("option");
-                button.textContent = option.name;
-                button.onclick = () => checkAnswer(option.name);
-                optionsContainer.appendChild(button);
-            });
-
-            imageElement.style.display = "block";
         }
 
         function checkAnswer(selectedName) {
             if (selectedName === currentInsect.name) {
+                alert("Richtig!");
+                loadNewQuestion();
+            } else {
+                alert("Falsch. Versuche es erneut!");
+            }
+        }
+
+        function checkDevelopmentAnswer(selectedDevelopment) {
+            if (selectedDevelopment.toLowerCase().includes(currentInsect.development)) {
                 alert("Richtig!");
                 loadNewQuestion();
             } else {
