Update final final index.html

--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
         };
 
         const developmentTypes = {
-            holometabol: "holometabol (Komplette Metamorphose)",
-            hemimetabol: "hemimetabol (Unvollständige Metamorphose)",
-            ametabol: "ametabol (Keine Metamorphose)"
+            holometabol: "holometabol",
+            hemimetabol: "hemimetabol",
+            ametabol: "ametabol"
         };
 
         let currentCategory = "";
