Update final 3 index.html

--- a/index.html
+++ b/index.html
@@ -198,9 +198,9 @@
                 questionText.textContent = `Wie entwickelt sich die ${currentInsect.name}?`;
 
                 const options = [
-                    "holometabol (Komplette Metamorphose)",
-                    "hemimetabol (Unvollständige Metamorphose)",
-                    "ametabol (Keine Metamorphose)"
+                    "holometabol",
+                    "hemimetabol",
+                    "ametabol"
                 ];
 
                 optionsContainer.innerHTML = "";
