--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-    <a href="/quiz2/index.html">Zum zweiten Quiz</a>
+    <a href="https://github.com/PietPestControl/Schadinsekten_quiz/quiz2/index.html">Zum zweiten Quiz</a>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Insekten Quiz</title>
