--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -144,10 +144,9 @@
                 button.textContent = option;
                 button.onclick = () => {
                     if (option === correctAnswer) {
-                        alert("Richtig!");
                         loadNewQuestion();
                     } else {
-                        alert("Falsch. Versuche es erneut!");
+                        alert("Möörp. Versuche es erneut!");
                     }
                 };
                 optionsContainer.appendChild(button);
