--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -54,63 +54,91 @@
                 wirkungsort: "Axon",
                 funktionsweise: "Halten die spannungsabhängigen Natriumkanäle offen",
                 wirkstoffgruppe: "Pyrethroide Typ I",
-                wirkstoffe: ["Esbiothrin", "Tetramethrin", "Permethrin", "Vaporthrin"]
+                wirkstoffe: ["Esbiothrin", "Tetramethrin", "Permethrin", "Vaporthrin", "Pralletrin", "1-R-Transphenotrin"]
             },
             {
                 art: "Nervengift",
                 wirkungsort: "Synapse",
-                funktionsweise: "Acetylcholinesterasehemmer",
-                wirkstoffgruppe: "Carbamate",
-                wirkstoffe: ["Bendiocarb"]
-            },
-            {
-                art: "Nervengift",
-                wirkungsort: "Synapse",
-                funktionsweise: "Acetylcholinesterasehemmer",
-                wirkstoffgruppe: "Organophosphate",
-                wirkstoffe: ["Chlorpyrifos", "Diazinon"]
-            },
-            {
-                art: "Nervengift",
-                wirkungsort: "Axon",
-                funktionsweise: "Blockieren die spannungsabhängigen Natriumkanäle",
-                wirkstoffgruppe: "Pyrethroide Typ II",
-                wirkstoffe: ["Cypermethrin", "Deltamethrin"]
-            },
-            {
-                art: "Nervengift",
-                wirkungsort: "Synapse",
-                funktionsweise: "Bindung an GABA-Rezeptoren",
-                wirkstoffgruppe: "Phenylpyrazole",
-                wirkstoffe: ["Fipronil"]
+                funktionsweise: "ersetzen Acetylcholin am Rezeptor der postsynaptischen Zelle",
+                wirkstoffgruppe: "Neonicotinoide",
+                wirkstoffe: ["Imidacloprid", "Acetameprid", "Clothianidin"]
             },
             {
                 art: "Zellgift",
-                wirkungsort: "Mitochondrien",
-                funktionsweise: "ATP-Produktion wird unterbunden",
+                wirkungsort: "Metochondrien",
+                funktionsweise: "unterbinden die Produktion von ATP, keine Zellatmung mehr",
                 wirkstoffgruppe: "Pyrrole",
                 wirkstoffe: ["Chlorfenapyr"]
             },
             {
-                art: "IWR (Insektenwachstumsregulator)",
-                wirkungsort: "Hormonsystem",
-                funktionsweise: "Gestörte Larvalentwicklung durch Juvenoide",
-                wirkstoffgruppe: "Juvenoide",
-                wirkstoffe: ["S-Methopren", "Pyriproxifen"]
+                art: "Nervengift",
+                wirkungsort: "Axon",
+                funktionsweise: "Halten die spannungsabhängigen Natriumkanäle offen",
+                wirkstoffgruppe: "Pyrethroide Typ II",
+                wirkstoffe: ["Cypermethrin", "Deltamethrin", "Cyphenotrhrin", "Alpha-Cypermethrin"]
+            },
+            {
+                art: "Nervengift",
+                wirkungsort: "Axon",
+                funktionsweise: "Bindung an GABA-Rezeptoren, halten die Chloridkanäle geschlossen",
+                wirkstoffgruppe: "Phenylpyrazole",
+                wirkstoffe: ["Fipronil"]
+            },
+            {
+                art: "Mechanische Wirkung",
+                wirkungsort: "Außenskelett (Kutikula)",
+                funktionsweise: "aufreiben der schützenden Wachsschichten, tod durch Austrocknung",
+                wirkstoffgruppe: "Anorganische Verbindungen",
+                wirkstoffe: ["Amorphes Siliciumdioxid", "Kieselgur", "Diatominerde", "Fossiles Plankton"]
             },
             {
                 art: "IWR (Insektenwachstumsregulator)",
                 wirkungsort: "Hormonsystem",
+                funktionsweise: "ersetzen das Juvinielhormon, es kommt zu fehlhäutungen",
+                wirkstoffgruppe: "Juvenoide",
+                wirkstoffe: ["S-Methopren", "Pyriproxifen", "Fenoxycarb"]
+            },
+            {
+                art: "Nervengift",
+                wirkungsort: "Hormonsystem",
                 funktionsweise: "Chitinsynthesehemmer",
-                wirkstoffgruppe: "Benzoylharnstoffe",
-                wirkstoffe: ["Diflubenzuron", "Lufenuron"]
+                wirkstoffgruppe: "Chrysanthemum cinerariaefolium",
+                wirkstoffe: ["Pyrethrum", "Pyrethrine"]
+            },
+            {
+                art: "Nervengift",
+                wirkungsort: "Axon",
+                funktionsweise: "Halten die spannungsabhängigen Natriumkanäle geschlossen",
+                wirkstoffgruppe: "Oxadiazine",
+                wirkstoffe: ["Indoxacarb"]
+            },
+             {
+                art: "Kontaktgift",
+                wirkungsort: "Atmung",
+                funktionsweise: "ersticken bei einatmung oder verschlucken",
+                wirkstoffgruppe: "Kontaktgiftgruppe",
+                wirkstoffe: ["Geraniol"]
+            },
+             {
+                art: "Synergist",
+                wirkungsort: "Axon",
+                funktionsweise: "Verhindert den Abbau von Pyrethrum/ Pyrethroiden an den spannungsabhängigen Natrium-Kanälen",
+                wirkstoffgruppe: "Wirkungsverstärker",
+                wirkstoffe: ["PBO Piperonylbutoxid"]
+            },
+            {
+                art: "Lösemittel",
+                wirkungsort: "Außenskelett",
+                funktionsweise: "Löst die Hülle von Insekteneiern auf",
+                wirkstoffgruppe: "Lösemittelgruppe",
+                wirkstoffe: ["Isopropanol"]
             },
             {
                 art: "Bakteriengift",
                 wirkungsort: "Darmwand",
-                funktionsweise: "Toxinbildung durch Abtötung von Bakterien",
+                funktionsweise: "Bakterien durchlöchern die Darmwand",
                 wirkstoffgruppe: "Toxine aus Bakterienproteinen",
-                wirkstoffe: ["Bacillus thuringiensis"]
+                wirkstoffe: ["Bacillus thuringiensis israelensis"]
             }
         ];
 
