--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -33,6 +33,7 @@
             border-radius: 5px;
             cursor: pointer;
             transition: background-color 0.3s ease;
+            font-size: 20px;
         }
         .option:hover {
             background: #0056b3;
