--- a/quiz2/index.html
+++ b/quiz2/index.html
@@ -101,7 +101,7 @@
             },
             {
                 art: "Nervengift",
-                wirkungsort: "Hormonsystem",
+                wirkungsort: "Axon",
                 funktionsweise: "Chitinsynthesehemmer",
                 wirkstoffgruppe: "Chrysanthemum cinerariaefolium",
                 wirkstoffe: ["Pyrethrum", "Pyrethrine"]
